# ptelemetry-python-sdk

./: .clabot  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.githooks/: pre-push
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml  release.yml
docs/: api-reference.md  examples.md  getting-started.md
ptelemetry/: __init__.py  client.py
scripts/: setup-hooks.sh
tests/: __init__.py  test_client.py
