[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ptelemetry"
version = "0.1.3"
description = "Python SDK for ProductTelemetry - privacy-first product analytics"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "AInvirion", email = "support@ainvirion.com" }
]
keywords = [
    "telemetry",
    "analytics",
    "metrics",
    "privacy",
    "gdpr",
    "cli",
    "sdk"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "respx>=0.20",
    "build>=0.10.0",
]

[project.urls]
Homepage = "https://github.com/AInvirion/ptelemetry-python-sdk"
Repository = "https://github.com/AInvirion/ptelemetry-python-sdk"
Documentation = "https://github.com/AInvirion/ptelemetry-python-sdk/tree/main/docs"

[tool.hatch.build.targets.wheel]
packages = ["ptelemetry"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
